User App Sdm Media Displays: Fixed z-index for Ani Bg media object

--- a/apps/SdmMediaDisplays/css/SdmMediaDisplays.css
+++ b/apps/SdmMediaDisplays/css/SdmMediaDisplays.css
@@ -8,4 +8,5 @@
     left: 19px;
     width: 1637px;
     border-radius: 21px;
+    z-index: -1000;
 }
